End of Lesson 13

--- a/index.html
+++ b/index.html
@@ -97,8 +97,7 @@
 	</article>
 	<footer class="bg-dark text-light">
     <div class="container py-2 pb-4">
-      <!-- Footer Task 1: add in your footer here. usually all rights reserved your club/ company name -->
-		All rights reserved Byte Busters Coding Club
+		<h6 style="color: hotpink; font-size: 9.6px; text-align: left;">All rights reserved Byte Busters Coding Club</h6>
     </div>
   </footer>
   <!-- End of coding region -->
