--- a/practice2.html
+++ b/practice2.html
@@ -55,10 +55,10 @@
           <td><span class="btn btn-primary">Accidental surplus causing high deflation</td>
          </tr>
          <tr>
-          <td>6097</td>
-          <td>Food and Consumer Education</td>
-          <td>A1</td>
-          <td><span class="btn btn-success">Pass</td>
+          <td>Mao Shan Wang 3</td>
+          <td>$190/kg</td>
+          <td>New York City, USA</td>
+          <td><span class="btn btn-warning">Buy before inflation reaches 10-15%</td>
          </tr>
         </tbody>
         <tfoot>
