End of Lesson 14

--- a/practice.html
+++ b/practice.html
@@ -141,6 +141,12 @@
     <h6 class="p3resilience">heading 6 is the smallest font</h6>
     <p id="jovan1234">Some more text. A new paragraph.</p>
 
+    <b>My bucket list of 2024</b>
+    <li>Go to VIP Fishing Resort</li>
+    <li>Go to spa 3 times.</li>
+    <li>Go ChatGPT.</li>
+    <li>Make 3 new friends this year.</li>
+
     <script>
       let validate = () => {
         let InputFirstName = document.getElementById("firstname");
