--- a/projects.html
+++ b/projects.html
@@ -3,12 +3,12 @@
 <head>
 	<meta charset="utf-8"/>
 	<meta name="viewport" content="width=device-width"/>
-	<title>Byte Buster Coding Club</title>
+	<title>King Porker Primary School</title>
 	<script src="script/jquery.min.js"></script>
 	<script src="script/bootstrap.js"></script>
 	<script src="script/projects.js"></script>
 	<link href="script/bootstrap.css" rel="stylesheet"/>
-	<link href="img/favicon-bbcc.png" rel="icon"/>
+	<link href="img/King Porker 2.png" rel="icon"/>
 	<link href="script/projects.css" rel="stylesheet"/>
 </head>
 <body class="bg-secondary bg-opacity-10" style="min-width:320px">
@@ -16,13 +16,13 @@
 		<nav class="navbar navbar-dark navbar-expand-lg bg-primary">
 			<div class="container-fluid">
 				<a class="navbar-brand" href="index.html">
-					<img src="img/logo-bbcc.png" alt="logo" class="d-inline-block" style="max-height:3rem">
-					<span class="d-none d-sm-inline-block align-middle">Byte Buster<small class="d-block lh-xs fs-7">Coding Club</small></span></a>
+					<img src="img/King Porker 2.png" alt="logo" class="d-inline-block" style="max-height:3rem">
+					<span class="d-none d-sm-inline-block align-middle">King Porker<small class="d-block lh-xs fs-7">Primary School</small></span></a>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navlinks"><span class="navbar-toggler-icon"></span></button>
 				<div class="collapse navbar-collapse" id="navlinks">
 					<ul class="navbar-nav mr-auto mb-2 mb-lg-0">
 						<li class="nav-item"><a class="nav-link" href="aboutus.html">Abouts Us</a></li>
-            <li class="nav-item"><a class="nav-link" href="memberspotlight.html">Members Spotlight</a></li>
+                        <li class="nav-item"><a class="nav-link" href="memberspotlight.html">Members Spotlight</a></li>
 						<li class="nav-item"><a class="nav-link" href="events.html">Events</a></li>
 						<li class="nav-item"><a class="nav-link active" href="projects.html">Past Projects</a></li>
 						<li class="nav-item"><a class="nav-link" href="contacts.html">Contact Us</a></li>
@@ -31,7 +31,7 @@
 			</div>
 		</nav>
 	</header>
-	<!-- Here the main container where students should code -->
+
 	<article class="min-vh-100">
 		<!-- Banner Region -->
 		<div id="banner"></div>
@@ -47,23 +47,25 @@
 			</div>
 		</div>
 		<!-- Key section -->
-		<div class="container py-3 pb-4">
-			<!-- Create An Unordered List with 2 List Items -->
-
-			<div class="tab-content">
-				<!-- Create two tabs for Project Showcase
-	-  The first tab should have
-				- One header of "Monke & Banana" with the following source: https://scratch.mit.edu/projects/808392264/embed (Width 485 & Height 402)
-				- Another header of "Platformer Game" with the following source: https://scratch.mit.edu/projects/779856092/embed (Width 485 & Height 402)
-
-	-  The second tab should have
-				- A Canvas with a black border of size: Width 800 & Height 600 with an ID of "canvasBoard"
-				- 2 radio buttons:
-						- One of them should be named "Pause Animation" with an ID of "canvasPause" with a red looking appearance.
-						- Another one should be named "Play Animation"  with an ID of "canvasPlay" with a green looking appearance.  -->
-
+			<div class="container py-3 pb-4">
+				<ul class="nav nav-pills">
+					<li class="nav-item">
+						<button class="nav-link rounded-pill" data-bs-toggle="pill" data-bs-target="#scratch">Scratch Projects</button>
+					</li>
+					<li class="nav-item">
+                        <button class="nav-link rounded-pill active" data-bs-toggle="pill" data-bs-target="#canvas">HTML Canvas Projects</button>
+					</li>
+				</ul>
+				<div class="tab-content">
+					<div class="tab-pane fade" id="scratch">
+						<h3>I am scratched.</h3>
+						<h3>I am scratched.</h3>
+					</div>
+					<div class="tab-pane fade show active" id="canvas">
+						<p style="color: hotpink; font-size: 20px; text-align: justify;">This is a JavaScript Java.</p>
+					</div>
+				</div>
 			</div>
-		</div>
 	</article>
 	<!-- End of coding region -->
 	<footer class="bg-dark text-light">
