--- a/practice2.html
+++ b/practice2.html
@@ -63,13 +63,11 @@
         </tbody>
         <tfoot>
           <tr>
-            <th colspan="3">Ok, this is the end of my results. Sorry for doing badly.</th>
-          </tr>
-          <tr>
-            <td colspan="3">Irrelevant</td>
-             <p class="text-right">
-             <button type="button" class="btn btn-success">Click here for your free robux.</button>
-             </p>
+            <p class="text-right">
+            <button type="button" class="btn btn-success">Click here for your free robux.</button>
+            </p>
           </tr>
         </tfoot>
       </table>
+    </body>
+</html>
