End of Lesson 16

--- a/events.html
+++ b/events.html
@@ -112,7 +112,7 @@
   </article>
   <!-- End of coding region -->
   <footer class="bg-dark text-light">
-    <div class="container py-2 pb-4">XXX</div>
+    <div class="container py-2 pb-4">All rights reserved by 2024-2026 King Porker Primary School</div>
   </footer>
 </body>
 </html>
