--- a/projects.html
+++ b/projects.html
@@ -58,12 +58,14 @@
 				</ul>
 				<div class="tab-content">
 					<div class="tab-pane fade" id="scratch">
-						<h3>I am scratched.</h3>
-						<h3>I am scratched.</h3>
+						<h3>Monke and Banana</h3>
+						<iframe src="https://scratch.mit.edu/projects/808392264/embed" width="485" height="402"></iframe>
+						<h3>Platformer Game</h3>
+						<iframe src="https://scratch.mit.edu/projects/779856092/embed" width="485" height="402"></iframe>
 					</div>
 					<div class="tab-pane fade show active" id="canvas">
 						<p style="color: hotpink; font-size: 20px; text-align: justify;">This is a JavaScript Java.</p>
-						<iframe width="500" height="500" src="https://www.youtube.com/watch?v=Zm0_Js9EeTQ"></iframe>
+						<iframe width="400" height="300" src="https://www.youtube.com/watch?v=HbpZ8FMxvt8"></iframe>
 					</div>
 				</div>
 			</div>
