End of Lesson 17

--- a/practice.html
+++ b/practice.html
@@ -146,6 +146,10 @@
     <li>Go to spa 3 times.</li>
     <li>Go ChatGPT.</li>
     <li>Make 3 new friends this year.</li>
+    <script>
+      let answer = window.prompt("How do you feel?");
+      console.log("Hello, Ms Tracie " + answer)
+    </script>
     <canvas id="drawingboard" width="800" height="600" class="border border-dark">
 
     </canvas>
