--- a/projects.html
+++ b/projects.html
@@ -64,8 +64,7 @@
 						<iframe src="https://scratch.mit.edu/projects/779856092/embed" width="485" height="402"></iframe>
 					</div>
 					<div class="tab-pane fade show active" id="canvas">
-						<p style="color: hotpink; font-size: 20px; text-align: justify;">This is a JavaScript Java.</p>
-						<iframe width="400" height="300" src="https://www.youtube.com/watch?v=HbpZ8FMxvt8"></iframe>
+						<canvas id="drawingboard" class="border border-success" width="750" height="200"></canvas>
 					</div>
 				</div>
 			</div>
