End of Lesson 18

--- a/projects.html
+++ b/projects.html
@@ -25,7 +25,7 @@
                         <li class="nav-item"><a class="nav-link" href="memberspotlight.html">Members Spotlight</a></li>
 						<li class="nav-item"><a class="nav-link" href="events.html">Events</a></li>
 						<li class="nav-item"><a class="nav-link active" href="projects.html">Past Projects</a></li>
-						<li class="nav-item"><a class="nav-link" href="contacts.html">Contact Us</a></li>
+						<li class="nav-item"><a class="nav-link" href="contactus.html">Contact Us</a></li>
 					</ul>
 				</div>
 			</div>
@@ -65,6 +65,11 @@
 					</div>
 					<div class="tab-pane fade show active" id="canvas">
 						<canvas id="drawingboard" class="border border-success" width="750" height="200"></canvas>
+						<div>
+							<input type="radio" name="playpause" id="pauseAnimation" /> Pause Animation
+							<input type="radio" name="playpause" id="playAnimation" /> Play Animation
+							<input type="radio" name="playpause" id="playAnimationX2" checked /> Speed Run Animation
+						</div>
 					</div>
 				</div>
 			</div>
